syntax = "proto3";

option go_package = "/";


service Storage {
	rpc Save(SaveRequest) returns (SaveResponse);
	rpc Get(GetRequest) returns (GetResponse);
	rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message SaveRequest {
	int64 chatID = 1;
	string site = 2;
}

message SaveResponse {
	string message = 1;
}

message GetRequest {
	int64 chatID = 1;
}

message GetResponse {
	repeated string message = 1;
}


message DeleteRequest {
	int64 chatID = 1;
	string site = 2;
}

message DeleteResponse {
	string message = 1;
}